platform/security/authentik/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-internal
  namespace: auth
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`auth.local.kagiso.me`) || Host(`auth.kagiso.me`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
