platform/security/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.kagiso.me`)
      kind: Rule
      middlewares:
        - name: ingress-secure-headers@kubernetescrd
        - name: ingress-compress@kubernetescrd
        - name: ingress-crowdsec-bouncer@kubernetescrd
      services:
        - name: authentik-server
          port: 80
  tls: {}
